# xmonad-config

./: .gitignore  Makefile  README.md  bar.hs  build  cabal.project  default.nix  hie.yaml  install.sh  package.yaml  xmonad-config.cabal  xmonad-phenax-config.cabal  xmonad.hs
lib/: Config.hs  Keybindings.hs  Layouts.hs  Scratchpads.hs  Theme.hs  Utils.hs
src/: Bar.hs  XmonadConfig.hs
src/Lib/: Config.hs  Keybindings.hs  Layouts.hs  Scratchpads.hs  Theme.hs  Utils.hs
