cabal-version:       2.2

name:                ph-xmonad-config
version:             0.1.0.0
build-type:          Simple

library library
  hs-source-dirs: ./
  ghc-options: -Wdefault -Wextra -Wno-unused-do-bind
  build-depends:
    base,
    xmonad,
    --xmonad-utils,
    xmonad-extras
  default-language:    Haskell2010

