cabal-version: 2.2

name:           xmonad-phenax-config
version:        0.0.0
license:        MIT
build-type:     Simple

common common-def
  ghc-options: -Wdefault -Wextra -Wno-unused-do-bind -fwarn-tabs -threaded -O2 -with-rtsopts=-N4
  build-depends: base
    , X11
    , process
    , containers
    , parsec
    , xmobar
    , xmonad
    , xmonad-contrib
    , extensible-exceptions
  hs-source-dirs: src
  default-language: Haskell2010

executable statusbar
  import: common-def
  main-is: ./Bar.hs

executable window-manager
  import: common-def
  main-is: ./XmonadConfig.hs
