cabal-version: 2.2

name:           xmonad-phenax-config
version:        0.0.0
license:        MIT
build-type:     Simple

common common-def
  ghc-options: -Wdefault -Wextra -Wno-unused-do-bind -fwarn-tabs -threaded -O2 -with-rtsopts=-N4
  build-depends:
      base
    , X11
    , process
    , containers
    , parsec
    , xmobar <= 0.44.2
    , xmonad <= 0.17.0
    , xmonad-contrib <= 0.17.0
    , extensible-exceptions
  hs-source-dirs: src
  default-language: Haskell2010
  default-extensions:
      LambdaCase
      FlexibleContexts
  other-modules:
      Lib.Config
    , Lib.Keybindings
    , Lib.Layouts
    , Lib.Scratchpads
    , Lib.Theme
    , Lib.Utils

library
  import: common-def

executable xmobar
  import: common-def
  main-is: ./Bar.hs

executable xmonad
  import: common-def
  main-is: ./XmonadConfig.hs
